# deimos

./: .gitignore  BuildSolution.bat  CMakeLists.txt  CMakePresets.json  README.md
cmake/: resourcecompile.cmake  windeployqt.cmake
docs/: mrc file format.txt
resources/: mars.rc  resources.qrc
src/app/: CMakeLists.txt  assetdialog.cpp  assetdialog.hpp  assettreewidget.cpp  assettreewidget.hpp  browselineedit.cpp  browselineedit.hpp  common.cpp  common.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  projectfile.cpp  projectfile.hpp  projecttab.cpp  projecttab.hpp  resources.cpp
